<resources>
    <string name="app_name">Test</string>
    <string name="action_settings">Settings</string>
    <string name="pass_test">Пройти тест</string>
    <string name="see_result">Просмотреть результаты</string>
    <string name="exit">Выйти</string>
    <string name="instruction_text">\tВ данном тесте последовательно будут предъявлены 34 действия.\n\tВы должны оценить, можете ли Вы выполнить каждое из приведенных далее действий на данном этапе своего развития, используя для самооценки шкалу от 0 до 10 баллов. Если действие для Вас представляется трудным, то ставится невысокий балл. Если Вы считаете, что легко справитесь, то можно поставить высокий балл.\n\tНужно обратить особое внимание на то, что речь идет не о желаниях, а только о возможностях и способностях выполнять трудовые действия не только в желаемых типичных ситуациях, но и в непредвиденных, непредсказуемых ситуациях.\n\tВсе баллы проставляются в специальное поле.\n\tВ конце тестирования будет предложен список профессий, из которого вам необходимо выбрать желаемую.</string>
    <string name="instruction_title">Инструкция</string>
    <string name="accept">Подтвердить</string>
    <string name="enter_sex">Укажите, пожалуйста, Ваш пол:</string>
    <string name="man">Мужской</string>
    <string name="woman">Женский</string>

</resources>
