<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/blur">

    <TextView
        android:id="@+id/tv_EnterSex"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:text="@string/enter_sex"
        android:gravity="center_horizontal|center_vertical"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="70dp"
        android:layout_below="@+id/tv_EnterSex"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_textview">

        <RadioButton
            android:id="@+id/radio_man"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:text="@string/man"
            android:textSize="22sp" />

        <RadioButton
            android:id="@+id/radio_woman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:text="@string/woman"
            android:textSize="22sp" />

    </RadioGroup>
    <Button
        android:id="@+id/btnAcceptS"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="470dp"
        android:background="@drawable/rounded"
        android:text="@string/accept"
        android:layout_centerHorizontal="true" />

</RelativeLayout>