<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/blur"
    >

    <TextView
        android:id="@+id/tv_Instruction"
        android:layout_width="wrap_content"
        android:layout_height="450dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView10"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/rounded_textview"
        android:fontFamily="sans-serif"
        android:lineSpacingExtra="2sp"
        android:scrollbars="vertical"
        android:fadeScrollbars="false"
        android:text="@string/instruction_text"
        android:textSize="18sp" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="18sp"
        android:text="@string/instruction_title"
        android:id="@+id/textView10"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textStyle="normal|bold"/>

    <Button
        android:id="@+id/btnAcceptInstr"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="520dp"
        android:background="@drawable/rounded"
        android:text="@string/accept"
        android:layout_centerHorizontal="true" />
</RelativeLayout>